--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-latex": "^2.0.0",
+    "react-markdown": "^4.3.1",
+    "react-mathjax": "^1.0.1",
     "react-scripts": "3.4.3",
+    "rehype-katex": "^4.0.0",
+    "remark-math": "^3.0.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
